etc/tests/fuzz/errors/adt/duplicate-variant.nshape
shape adt-duplicate-variant {
  family "compiler-errors/adt"
  generator "error"
  features ["error", "adt", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "redefinition of enum member 'A' in enum 'Bad'"
  source ny <<'NY'
use std.core

enum Bad {
   A,
   A
}

print(1)
NY
}
